--- a/common/colorUi/main.scss
+++ b/common/colorUi/main.scss
@@ -4,6 +4,7 @@
 @import './text';
 @import './margin&padding';
 @import './border';
+@import './button';
  
 /* ==================
         初始化
@@ -25,25 +26,46 @@
 // }
 
 .w-25 {
+/* #ifdef MP */
 	width: 25%;
+/* #endif */
+/* #ifndef MP */
+	width: 187.5rpx;
+/* #endif */
 }
 
 .w-50 {
+/* #ifdef MP */
 	width: 50%;
+/* #endif */
+/* #ifndef MP */
+	width: 375rpx;
+/* #endif */
 }
 
 .w-100 {
+/* #ifdef MP */
 	width: 100%;
+/* #endif */
+/* #ifndef MP */
+	width: 750rpx;
+/* #endif */
 }
 
 .h-25 {
+/* #ifdef MP */
 	height: 25%;
+/* #endif */
 }
 
 .h-50 {
+/* #ifdef MP */
 	height: 50%;
+/* #endif */
 }
 
 .h-100 {
+/* #ifdef MP */
 	height: 100%;
+/* #endif */
 }
