--- a/common/colorUi/margin&padding.scss
+++ b/common/colorUi/margin&padding.scss
@@ -55,7 +55,7 @@ $_marginOrPadding_xsl: 80 !default;
 
 			.#{$class_name} {
 				@each $v in $key_name {
-					#{$v}: $s_v + upx;
+					#{$v}: $s_v + upx !important;
 				}
 			}
 		}
