--- a/uni.scss
+++ b/uni.scss
@@ -12,65 +12,115 @@
  * 如果你的项目同样使用了scss预处理，你也可以直接在你的 scss 代码中使用如下变量，同时无需 import 这个文件
  */
 
+
+
+
 /* 颜色变量 */
+// $red: #e54d42;
+// $orange: #f37b1d;
+// $yellow: #fbbd08;
+// $olive: #8dc63f;
+// $green: #39b54a;
+// $cyan: #1cbbb4;
+// $blue: #0081ff;
+// $purple: #6739b6;
+// $mauve: #9c26b0;
+// $pink: #e03997;
+// $brown: #a5673f;
+// $grey: #8799a3;
+// $gray: #aaaaaa;
+// $black: #333333;
+// $white: #ffffff;
+
+// $red_light: #fadbd9;
+// $orange_light: #fde6d2;
+// $yellow_light: #f2ced2;
+// $olive_light: #e8f4d9;
+// $green_light: #f0dbff;
+// $cyan_light: #d2f1f0;
+// $blue_light: #cce6ff;
+// $purple_light: #e1d7f0;
+// $mauve_light: #ebd4ef;
+// $pink_light: #f9d7ea;
+// $brown_light: #ede1d9;
+// $grey_light: #e7ebed;
+
+// $_marginOrPadding_0: 0;
+// $_marginOrPadding_xs: 10;
+// $_marginOrPadding_sm: 20;
+// $_marginOrPadding_df: 30;
+// $_marginOrPadding_lg: 40;
+// $_marginOrPadding_xl: 50;
+// $_marginOrPadding_xxl: 60;
+// $_marginOrPadding_sl: 70;
+// $_marginOrPadding_xsl: 80;
+
+// $_text_xs: 20;
+// $_text_sm: 24;
+// $_text_df: 28;
+// $_text_lg: 32;
+// $_text_xl: 36;
+// $_text_xxl: 44;
+// $_text_sl: 80;
+// $_text_xsl: 120;
 
 /* 行为相关颜色 */
-$uni-color-primary: #007aff;
-$uni-color-success: #4cd964;
-$uni-color-warning: #f0ad4e;
-$uni-color-error: #dd524d;
+// $uni-color-primary: #007aff;
+// $uni-color-success: #4cd964;
+// $uni-color-warning: #f0ad4e;
+// $uni-color-error: #dd524d;
 
-/* 文字基本颜色 */
-$uni-text-color:#333;//基本色
-$uni-text-color-inverse:#fff;//反色
-$uni-text-color-grey:#999;//辅助灰色，如加载更多的提示信息
-$uni-text-color-placeholder: #808080;
-$uni-text-color-disable:#c0c0c0;
+// /* 文字基本颜色 */
+// $uni-text-color:#333;//基本色
+// $uni-text-color-inverse:#fff;//反色
+// $uni-text-color-grey:#999;//辅助灰色，如加载更多的提示信息
+// $uni-text-color-placeholder: #808080;
+// $uni-text-color-disable:#c0c0c0;
 
-/* 背景颜色 */
-$uni-bg-color:#ffffff;
-$uni-bg-color-grey:#f8f8f8;
-$uni-bg-color-hover:#f1f1f1;//点击状态颜色
-$uni-bg-color-mask:rgba(0, 0, 0, 0.4);//遮罩颜色
+// /* 背景颜色 */
+// $uni-bg-color:#ffffff;
+// $uni-bg-color-grey:#f8f8f8;
+// $uni-bg-color-hover:#f1f1f1;//点击状态颜色
+// $uni-bg-color-mask:rgba(0, 0, 0, 0.4);//遮罩颜色
 
-/* 边框颜色 */
-$uni-border-color:#c8c7cc;
+// /* 边框颜色 */
+// $uni-border-color:#c8c7cc;
 
-/* 尺寸变量 */
+// /* 尺寸变量 */
 
-/* 文字尺寸 */
-$uni-font-size-sm:24rpx;
-$uni-font-size-base:28rpx;
-$uni-font-size-lg:32rpx;
+// /* 文字尺寸 */
+// $uni-font-size-sm:24rpx;
+// $uni-font-size-base:28rpx;
+// $uni-font-size-lg:32rpx;
 
-/* 图片尺寸 */
-$uni-img-size-sm:40rpx;
-$uni-img-size-base:52rpx;
-$uni-img-size-lg:80rpx;
+// /* 图片尺寸 */
+// $uni-img-size-sm:40rpx;
+// $uni-img-size-base:52rpx;
+// $uni-img-size-lg:80rpx;
 
-/* Border Radius */
-$uni-border-radius-sm: 4rpx;
-$uni-border-radius-base: 6rpx;
-$uni-border-radius-lg: 12rpx;
-$uni-border-radius-circle: 50%;
+// /* Border Radius */
+// $uni-border-radius-sm: 4rpx;
+// $uni-border-radius-base: 6rpx;
+// $uni-border-radius-lg: 12rpx;
+// $uni-border-radius-circle: 50%;
 
-/* 水平间距 */
-$uni-spacing-row-sm: 10px;
-$uni-spacing-row-base: 20rpx;
-$uni-spacing-row-lg: 30rpx;
+// /* 水平间距 */
+// $uni-spacing-row-sm: 10px;
+// $uni-spacing-row-base: 20rpx;
+// $uni-spacing-row-lg: 30rpx;
 
-/* 垂直间距 */
-$uni-spacing-col-sm: 8rpx;
-$uni-spacing-col-base: 16rpx;
-$uni-spacing-col-lg: 24rpx;
+// /* 垂直间距 */
+// $uni-spacing-col-sm: 8rpx;
+// $uni-spacing-col-base: 16rpx;
+// $uni-spacing-col-lg: 24rpx;
 
-/* 透明度 */
-$uni-opacity-disabled: 0.3; // 组件禁用态的透明度
+// /* 透明度 */
+// $uni-opacity-disabled: 0.3; // 组件禁用态的透明度
 
-/* 文章场景相关 */
-$uni-color-title: #2C405A; // 文章标题颜色
-$uni-font-size-title:40rpx;
-$uni-color-subtitle: #555555; // 二级标题颜色
-$uni-font-size-subtitle:36rpx;
-$uni-color-paragraph: #3F536E; // 文章段落颜色
-$uni-font-size-paragraph:30rpx;
+// /* 文章场景相关 */
+// $uni-color-title: #2C405A; // 文章标题颜色
+// $uni-font-size-title:40rpx;
+// $uni-color-subtitle: #555555; // 二级标题颜色
+// $uni-font-size-subtitle:36rpx;
+// $uni-color-paragraph: #3F536E; // 文章段落颜色
+// $uni-font-size-paragraph:30rpx;
